--- a/index.html
+++ b/index.html
@@ -9,82 +9,91 @@
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="./public/assets/css/style.css">
-    <title>CollabGarden</title>
+    <title>CollabGarden formulaire</title>
 </head>
 
 <body>
-        <header>
+    <header>
 
-        </header>
+    </header>
 
-        <main>            
-                <div class="container-fluid">
-                    <div class="container">
-                        <h1>Créer une Annonce</h1>
-                <form method="POST" enctype="multipart/form-data">
-                    <div class="container row d-flex justify-content-center-lg">
-                    <div class="col-6-lg">
-                        <label for="title">Titre de l'annonce(*)</label>
-                        <input type="text" id="title" name="title" placeholder="Graines de chia" required>
-                    </div>
-                    <div class="col-5-lg">
-                        <label for="category">Catégorie (*)</label>
-                        <select id="category" name="category" required>
-                            <option value="">--Choisir une catégorie--</option>
-                            <option value="seeds">Graines</option>
-                            <option value="plants">Plantes</option>
-                            <option value="trees">Arbres</option>
-                        </select>
-                    </div>
-                    <div class="col-6-lg">
-                        <label for="description">Descriptif de l'annonce (*)</label>
-                        <div>
-                        <textarea id="description" name="description" rows="4" cols="40" placeholder="Disponibilité, environ 5 kg" required></textarea>
-                    </div>
-                    </div>
-                    <div class="container row d-flex">
-                        <div class="col-3-lg">
-                            <label for="phone">Numéro de Téléphone</label>
-                            <input type="tel" id="phone" name="phone" placeholder="0601020304">
+    <main>
+        <form method="post">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-10">
+                        <div class="row justify-content-between">
+                            <div class="col-12">
+                                <h1>Créer une nouvelle annonce</h1>
+                            </div>
+                            <div class="mb-3 col-lg-6">
+                                <label for="exampleFormControlInput1" class="form-label">Titre de l'annonce*</label>
+                                <input type="text" class="form-control" id="exampleFormControlInput1"
+                                    placeholder="Graines de chia" required>
+                            </div>
+                            <div class="col-lg-6">
+                                <p class="mb-0">Catégorie*</p>
+                                <select class="form-select mt-2" aria-label="Default select example">
+                                    <option selected>Choisir une catégorie</option>
+                                    <option value="seeds">Graines</option>
+                                    <option value="plants">Plantes</option>
+                                    <option value="trees">Arbres</option>
+                                </select>
+                            </div>
                         </div>
-                    <div class="col-3-lg">
-                        <label for="postalCode">Code Postal (*)</label>
-                        <input type="text" id="postalCode" name="postalCode" placeholder="80000" required>
-                    </div>
-                    <div class="col-3-lg">
-                        <label for="city">Ville (*)</label>
-                        <input type="text" id="city" name="city" placeholder="Amiens" required>
-                    </div>
-                    <div class="container d-flex">
-                        <input class="me-3" type="checkbox" id="autorisationPhone" name="autorisationPhone">
-                        <label for="autorisationPhone">Autoriser à me joindre par téléphone depuis l'annonce</label>
-                    </div>
-                    <legend>Le champ (*) est obligatoire</legend>
-                    <h2>Ajouter des photos</h2>
-                    <div>
-                        <label for="photos"></label>
-                        <input type="file" id="photos" name="photos" accept=".jpg,.jpeg,.png" multiple>
-                    </div>
-                    <div>
-                        <input type="submit" value="Mettre en ligne">
+                        <div class="row mb-3 justify-content-center">
+                            <div class="col-12">
+                                <label for="exampleFormControlTextarea1" class="form-label">Descriptif*</label>
+                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" required></textarea>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-6 col-lg-6">
+                                <input type="text" class="form-control" placeholder="Ville*" aria-label="City" required>
+                            </div>
+                            <div class="col-6 col-lg-6">
+                                <input type="text" class="form-control" placeholder="Code Postal*"
+                                    aria-label="postalcode" required>
+                            </div>
+                            <div class="col col-lg-5 my-3">
+                                <input type="text" class="form-control" placeholder="Numéro de téléphone"
+                                    aria-label="phone number">
+                            </div>
+                            <div class="col-12 form-check form-switch item-center ms-3 my-3">
+                                <input class="form-check-input" type="checkbox" role="switch"
+                                    id="flexSwitchCheckChecked" checked>
+                                <label class="form-check-label" for="flexSwitchCheckChecked">Autoriser à me joindre par
+                                    téléphone</label>
+                            </div>
+                            <p>Les champs * sont obligatoires</p>
+                        </div>
+                        <div class="row">
+                            <div class="mb-3">
+                                <div class="col-12">
+                                    <label for="formFileMultiple" class="form-label">Ajouter des photos</label>
+                                    <input class="form-control" type="file" id="formFileMultiple" multiple>
+                                </div>
+                            </div>
+                            <div class="col-12 text-center">
+                                <button type="submit" class="btn btn-more ">Mettre en ligne</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                </form>
             </div>
+        </form>
+    </main>
 
-        </main>
+    <footer></footer>
 
-        <footer></footer>
+    <script src="https://kit.fontawesome.com/b4f9175766.js" crossorigin="anonymous"></script>
+    <footer>
 
-        <script src="https://kit.fontawesome.com/b4f9175766.js" crossorigin="anonymous"></script>
-        <footer>
+    </footer>
+    <script src="./lib/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
 
-        </footer>
-        <script src="./lib/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
-    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
