--- a/index.html
+++ b/index.html
@@ -12,71 +12,6 @@
     <title>CollabGarden formulaire</title>
 </head>
 
-  <footer>
-      <div class="container-fluid footerBg">
-        <div class="row text-center">
-
-          <div class="col-12">
-            <div class="socialMedia">
-              <img src="./public/assets/img/socialmedia/insta.png" class="icon_socialMedia bg_Social">
-              <img src="./public/assets/img/socialmedia/fb.png" class="icon_socialMedia bg_Social">
-              <img src="./public/assets/img/socialmedia/x.png" class="icon_socialMedia bg_Social">
-            </div>
-          </div>
-
-          <div class="col-4">
-            <p>Politique de confidentialitée</p>
-          </div>
-
-          <div class="col-4">
-            <div>Contact</div>
-          </div>
-
-          <div class="col-4">
-              <div>Mentions légales</div>
-          </div>
-
-          <div class="col-12">
-            <div>Source photos: Pixabay & Unsplash</div>
-            <div>© CollabGarden</div>
-          </div>
-
-        </div>
-      </div>
-
-
-
-
-      <div class="container-fluid footerBg_desktop">
-        <div class="row text-center">
-
-          <div class="col-6 mt-2">
-            <p>Contactez nous:</p>
-            <div>Téléphone: 0621222324</div>
-            <div>Email: collabgarden@gmail.com</div>
-            <hr>
-            <p>Mentions légales</p>
-          </div>
-
-          <div class="col-6 mt-4">
-            <div>ANNONCES</div>
-            <div>CONSEILS & JARDIN</div>
-            <div>EVENEMENTS</div>
-            <hr>
-            <p>Politique de confidentialitée</p>
-          </div>
-
-          <div class="col-12">
-              <div>© CollabGarden</div>
-              <div>Source photos: Pixabay & Unsplash</div>
-          </div>
-
-        </div>
-      </div>
-
-  
-  </footer>
-
 <body>
     <header>
 
@@ -109,7 +44,8 @@
                         <div class="row mb-3 justify-content-center">
                             <div class="col-12">
                                 <label for="exampleFormControlTextarea1" class="form-label">Descriptif*</label>
-                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" required></textarea>
+                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+                                    required></textarea>
                             </div>
                         </div>
                         <div class="row">
@@ -139,7 +75,7 @@
                                     <input class="form-control" type="file" id="formFileMultiple" multiple>
                                 </div>
                             </div>
-                            <div class="col-12 text-center">
+                            <div class="col-12 text-center mb-3">
                                 <button type="submit" class="btn btn-more ">Mettre en ligne</button>
                             </div>
                         </div>
@@ -149,7 +85,72 @@
         </form>
     </main>
 
-    <footer></footer>
+    <footer>
+
+        <div class="container-fluid footerBg">
+            <div class="row text-center">
+
+                <div class="col-12">
+                    <div class="socialMedia">
+                        <img src="./public/assets/img/socialmedia/insta.png" class="icon_socialMedia bg_Social">
+                        <img src="./public/assets/img/socialmedia/fb.png" class="icon_socialMedia bg_Social">
+                        <img src="./public/assets/img/socialmedia/x.png" class="icon_socialMedia bg_Social">
+                    </div>
+                </div>
+
+                <div class="col-4">
+                    <p>Politique de confidentialitée</p>
+                </div>
+
+                <div class="col-4">
+                    <div>Contact</div>
+                </div>
+
+                <div class="col-4">
+                    <div>Mentions légales</div>
+                </div>
+
+                <div class="col-12">
+                    <div>Source photos: Pixabay & Unsplash</div>
+                    <div>© CollabGarden</div>
+                </div>
+
+            </div>
+        </div>
+
+
+
+
+        <div class="container-fluid footerBg_desktop">
+            <div class="row text-center">
+
+                <div class="col-6 mt-2">
+                    <p>Contactez nous:</p>
+                    <div>Téléphone: 0621222324</div>
+                    <div>Email: collabgarden@gmail.com</div>
+                    <hr>
+                    <p>Mentions légales</p>
+                </div>
+
+                <div class="col-6 mt-4">
+                    <div>ANNONCES</div>
+                    <div>CONSEILS & JARDIN</div>
+                    <div>EVENEMENTS</div>
+                    <hr>
+                    <p>Politique de confidentialitée</p>
+                </div>
+
+                <div class="col-12">
+                    <div>© CollabGarden</div>
+                    <div>Source photos: Pixabay & Unsplash</div>
+                </div>
+
+            </div>
+        </div>
+
+
+
+    </footer>
 
     <script src="https://kit.fontawesome.com/b4f9175766.js" crossorigin="anonymous"></script>
     <footer>
@@ -161,4 +162,5 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
