--- a/profil.html
+++ b/profil.html
@@ -194,7 +194,7 @@
                   >
                 </h5>
                 <p class="text-secondary">
-                  Jeune pousse, mesure environs 60cm. Parfumée.
+                  Jeune pousse, mesure environs 60cm.
                 </p>
                   <i class="fa-regular fa-star"></i>
                   <span class="ms-1 fw-bold">5</span>
