--- a/index.html
+++ b/index.html
@@ -15,8 +15,85 @@
 
 <body>
     <header>
+        <nav class="mobile d-md-none mb-3">
+            <div class="container d-flex justify-content-between">
+                <div class="col-6"><img src="./public/assets/img/CollabGarden.svg" alt="logo collabgarden" class="logo">
+                </div>
+                <div class="col-6"><img src="./public/assets/img/profil/granny.png" alt="photo de profil"
+                        class="p_profil"></div>
+            </div>
+        </nav>
 
+        <!-- Version tablet-->
+        <nav class="tablet navbar navbar-expand justify-content-center d-none d-md-block d-lg-none">
+            <div class="container-fluid">
+                <img src="./public/assets/img/logo_desktop.png" alt="photo de profil" class="logo_desktop">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <div class="input-group searchbar_desktop ms-4">
+                        <input type="text" class="form-control" placeholder="Recherche" aria-label="Recherche">
+                        <span class="input-group-text" id="basic-addon2">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor"
+                                class="bi bi-search" viewBox="0 0 16 16">
+                                <path
+                                    d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
+                            </svg>
+                        </span>
+                    </div>
+
+                    <ul class="navbar-nav ms-2 me-2">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page">Annonces</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link">Conseils & Jardin</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link">Évènements</a>
+                        </li>
+                    </ul>
+                    <a class="btn btn-action ms-auto me-4"><i class="gg-add-r"></i></a>
+                    <img src="./public/assets/img/profil/granny.png" alt="photo de profil" class="p_profil_desktop ">
+                </div>
+            </div>
+        </nav>
+
+        <!-- Version desktop -->
+        <nav class="desktop navbar navbar-expand d-flex justify-content-center d-none d-lg-block">
+            <div class="container-fluid">
+                <img src="./public/assets/img/logo_desktop.png" alt="logo collabgarden" class="logo_desktop">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <div class="input-group searchbar_desktop ms-4">
+                        <input type="text" class="form-control" placeholder="Recherche" aria-label="Recherche"
+                            aria-describedby="basic-addon2">
+                        <span class="input-group-text" id="basic-addon2">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor"
+                                class="bi bi-search" viewBox="0 0 16 16">
+                                <path
+                                    d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
+                            </svg>
+                        </span>
+                    </div>
+
+                    <ul class="navbar-nav ms-5 me-2">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#">Annonces</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Conseils & Jardin</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Évènements</a>
+                        </li>
+                    </ul>
+                    <a href="#" class="btn btn-action ms-auto me-4">Créer une annonce</a>
+                    <img src="./public/assets/img/profil/granny.png" alt="photo de profil d'une personne agée"
+                        class="p_profil_desktop ">
+                </div>
+
+            </div>
+        </nav>
     </header>
+
 
     <main>
         <form method="post">
@@ -25,7 +102,7 @@
                     <div class="col-10">
                         <div class="row justify-content-between">
                             <div class="col-12">
-                                <h1>Créer une nouvelle annonce</h1>
+                                <h1 class="d-none d-lg-block">Créer une nouvelle annonce</h1>
                             </div>
                             <div class="mb-3 col-lg-6">
                                 <label for="exampleFormControlInput1" class="form-label">Titre de l'annonce*</label>
@@ -84,28 +161,43 @@
                 </div>
             </div>
         </form>
+        <nav
+            class="navbar navbar-mobile d-md-none bg-white sticky-bottom rounded-4 p-0 mb-10 mx-3 border border-secondary-subtle">
+            <div class="container justify-content-center">
+                <ul class="list d-flex flex-nowrap p-0 m-0 ">
+                    <li class="navbar-brand d-flex flex-row mx-2">
+                        <div class="flex-row text-center p-0">
+                            <i class="bi bi-house fs-1"></i>
+                            <p>Accueil</p>
+                        </div>
+                    </li>
+                    <li class="navbar-brand d-flex flex-nowrap mx-1">
+                        <div class="flex-row text-center p-0">
+                            <i class="bi bi-card-list fs-1"></i>
+                            <p>Annonces</p>
+                        </div>
+                    </li>
+                    <li class="navbar-brand d-flex flex-nowrap mx-1">
+                        <div class="text-center p-0">
+                            <i class="bi bi-lightbulb fs-1"></i>
+                            <p>Conseils</p>
+                        </div>
+                    </li>
+                    <li class="navbar-brand d-flex flex-nowrap mx-2">
+                        <div class="text-center p-0">
+                            <i class="bi bi-megaphone fs-1"></i>
+                            <p>Sorties</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </main>
 
     <footer>
 
         <div class="container-fluid footerBg">
             <div class="row text-center">
-
-                <div class="col-12">
-                    <div class="socialMedia">
-                        <img src="./public/assets/img/socialmedia/insta.png" class="icon_socialMedia bg_Social">
-                        <img src="./public/assets/img/socialmedia/fb.png" class="icon_socialMedia bg_Social">
-                        <img src="./public/assets/img/socialmedia/x.png" class="icon_socialMedia bg_Social">
-                    </div>
-                </div>
-
-                <div class="col-4">
-                    <p>Politique de confidentialitée</p>
-                </div>
-
-                <div class="col-4">
-                    <div>Contact</div>
-                </div>
                 <div class="col-12">
                     <div class="socialMedia">
                         <img src="./public/assets/img/socialmedia/socialinsta.png" alt="logo instagram"
@@ -123,14 +215,7 @@
                 <div class="col-4">
                     <div>Mentions légales</div>
                 </div>
-                <div class="col-4">
-                    <div>Mentions légales</div>
-                </div>
 
-                <div class="col-12">
-                    <div>Source photos: Pixabay & Unsplash</div>
-                    <div>© CollabGarden</div>
-                </div>
                 <div class="col-4">
                     <div>Politique de confidentialité</div>
                 </div>
@@ -142,31 +227,32 @@
 
             </div>
         </div>
-            </div>
-        </div>
-
-
-
-
+    
         <div class="container-fluid footerBg_desktop">
             <div class="row text-center">
-        <div class="container-fluid footerBg_desktop">
-            <div class="row text-center">
-
-                <div class="col-6 mt-2">
+                <div class="col-4 mt-2">
                     <p>Contactez nous:</p>
                     <div>Téléphone: 0621222324</div>
                     <div>Email: collabgarden@gmail.com</div>
                     <hr>
                     <p>Mentions légales</p>
                 </div>
-
-                <div class="col-6 mt-4">
+                <div class="col-4">
+                    <div class="socialMedia">
+                        <img src="./public/assets/img/socialmedia/socialinsta.png" alt="logo instagram"
+                            class="icon_socialMedia bg_Social">
+                        <img src="./public/assets/img/socialmedia/socialfb.png" alt="logo facebook"
+                            class="icon_socialMedia bg_Social">
+                        <img src="./public/assets/img/socialmedia/x.png" alt="logo x"
+                            class="icon_socialMedia bg_Social">
+                    </div>
+                </div>
+                <div class="col-4 mt-4">
                     <div>ANNONCES</div>
                     <div>CONSEILS & JARDIN</div>
                     <div>EVENEMENTS</div>
                     <hr>
-                    <p>Politique de confidentialitée</p>
+                    <p>Politique de confidentialité</p>
                 </div>
 
                 <div class="col-12">
@@ -177,21 +263,13 @@
             </div>
         </div>
 
-
-
-    </footer>
+                </div>
             </div>
         </div>
-
     </footer>
-
     <script src="https://kit.fontawesome.com/b4f9175766.js" crossorigin="anonymous"></script>
-    <footer>
-
-    </footer>
     <script src="https://kit.fontawesome.com/b4f9175766.js" crossorigin="anonymous"></script>
     <script src="./lib/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
