--- a/profil.html
+++ b/profil.html
@@ -26,19 +26,22 @@
       <div class="container-fluid p-0 mobile d-md-none align-items-center justify-content-center it">
         <img src="../CollabGarden/public/assets/img/profil/bgProfil.jpg" class="bgProfil img-fluid">
         <div class="row">
-          <div class="col-4">
+          <div class="col-10">
             <img src="public/assets/img/profil/pasMal.png" class="p_profil ms-3">
           </div>
-          <div class="col-6 py-1 mt-2">
-            <button class="btn btn-mobile-follow d-flex align-items-center justify-content-center"><img
-                src="public/assets/img/profil/follow.png" class="w-25 pe-1" alt="" />
-              <p class="m-0">SUIVRE</p>
-            </button>
-          </div>
+
           <div class="col-2 py-1 mt-3">
             <img src="public/assets/img/profil/plus.png" class="plus" alt="" />
           </div>
         </div>
+      </div>
+      <div class="col-6 py-1 ms-3">
+        <button class="btn btn-mobile-follow d-flex align-items-center justify-content-center"><img
+            src="public/assets/img/profil/follow.png" class="w-25 pe-1" alt="" />
+          <p class="m-0">SUIVRE</p>
+        </button>
+      </div>
+
 
         <div class="mt-3 ms-3">
           <h2>Colette</h2>
@@ -55,6 +58,7 @@
           <div class="info mb-3">Passionnée par la plante depuis ma tendre enfance.</div>
 
         </div>
+        
 
         <hr>
 
