--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./lib/bootstrap-5.3.3-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/bootstrap-icons.svg">
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="./public/assets/css/style.css">
-    <title>CollabGarden</title>
-  </head>
-  <body>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./lib/bootstrap-5.3.3-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/bootstrap-icons.svg">
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
+  <link rel="stylesheet" href="./public/assets/css/style.css">
+  <title>CollabGarden</title>
 </head>
 
 <body>
+  </head>
+
+  <body>
     <header>
       <!-- <div class="container">
         <div class="row">
@@ -41,9 +43,7 @@
       <!-- Hero -->
       <section id="hero" class="container-fluid bg-image">
         <div class="row">
-          <div
-            class="col-12 d-flex flex-column justify-content-center bg-image"
-          >
+          <div class="col-12 d-flex flex-column justify-content-center bg-image">
             <div class="container p-0">
               <div class="row">
                 <!-- Slogan -->
@@ -85,11 +85,7 @@
           </div>
           <div class="d-flex gap-3">
             <div class="card" style="width: 18rem">
-              <img
-                src="./public/assets/img/annonce_1.jpg"
-                class="card-img-top"
-                alt="..."
-              />
+              <img src="./public/assets/img/annonce_1.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
                 <div class="d-flex">
                   <h5 class="card-title">Graines de chia</h5>
@@ -99,11 +95,7 @@
               </div>
             </div>
             <div class="card" style="width: 18rem">
-              <img
-                src="./public/assets/img/annonce_1.jpg"
-                class="card-img-top"
-                alt="..."
-              />
+              <img src="./public/assets/img/annonce_1.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
                 <div class="d-flex">
                   <h5 class="card-title">Graines de chia</h5>
@@ -122,11 +114,7 @@
           </div>
           <div class="d-flex gap-3">
             <div class="card" style="width: 18rem">
-              <img
-                src="./public/assets/img/annonce_1.jpg"
-                class="card-img-top"
-                alt="..."
-              />
+              <img src="./public/assets/img/annonce_1.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
                 <div class="d-flex">
                   <h5 class="card-title">Graines de chia</h5>
@@ -136,11 +124,7 @@
               </div>
             </div>
             <div class="card" style="width: 18rem">
-              <img
-                src="./public/assets/img/annonce_1.jpg"
-                class="card-img-top"
-                alt="..."
-              />
+              <img src="./public/assets/img/annonce_1.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
                 <div class="d-flex">
                   <h5 class="card-title">Graines de chia</h5>
@@ -159,11 +143,7 @@
           </div>
           <div class="d-flex gap-3">
             <div class="card" style="width: 18rem">
-              <img
-                src="./public/assets/img/annonce_1.jpg"
-                class="card-img-top"
-                alt="..."
-              />
+              <img src="./public/assets/img/annonce_1.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
                 <div class="d-flex">
                   <h5 class="card-title">Graines de chia</h5>
@@ -173,11 +153,7 @@
               </div>
             </div>
             <div class="card" style="width: 18rem">
-              <img
-                src="./public/assets/img/annonce_1.jpg"
-                class="card-img-top"
-                alt="..."
-              />
+              <img src="./public/assets/img/annonce_1.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
                 <div class="d-flex">
                   <h5 class="card-title">Graines de chia</h5>
@@ -191,53 +167,46 @@
       </section>
       <!-- Fin main -->
 
-        <nav class="navbar sticky-bottom rounded-5 p-0 mb-10 mx-5 border border-5 ">
-            <div class="container justify-content-center">
-                <ul class="list d-flex flex-nowrap p-0 m-0 ">
-                    <li class="navbar-brand d-flex flex-row mx-2" href="#">
-                        <div class="flex-row text-center p-0">
-                            <i class="bi bi-house fs-1"></i>
-                            <p>Accueil</p>
-                        </div>
-                    </li>
-                    <li class="navbar-brand d-flex flex-nowrap mx-1" href="#">
-                        <div class="flex-row text-center p-0">
-                            <i class="bi bi-card-list fs-1"></i>
-                            <p>Annonces</p>
-                        </div>
-                    </li>
-                    <li class="navbar-brand d-flex flex-nowrap mx-1" href="#">
-                        <div class="text-center p-0">
-                            <i class="bi bi-lightbulb fs-1"></i>
-                            <p>Conseils</p>
-                        </div>
-                    </li>
-                    <li class="navbar-brand d-flex flex-nowrap mx-2" href="#">
-                        <div class="text-center p-0">
-                            <i class="bi bi-megaphone fs-1"></i>
-                            <p>Sorties</p>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-        
+      <nav class="navbar sticky-bottom rounded-5 p-0 mb-10 mx-5 border border-5 ">
+        <div class="container justify-content-center">
+          <ul class="list d-flex flex-nowrap p-0 m-0 ">
+            <li class="navbar-brand d-flex flex-row mx-2" href="#">
+              <div class="flex-row text-center p-0">
+                <i class="bi bi-house fs-1"></i>
+                <p>Accueil</p>
+              </div>
+            </li>
+            <li class="navbar-brand d-flex flex-nowrap mx-1" href="#">
+              <div class="flex-row text-center p-0">
+                <i class="bi bi-card-list fs-1"></i>
+                <p>Annonces</p>
+              </div>
+            </li>
+            <li class="navbar-brand d-flex flex-nowrap mx-1" href="#">
+              <div class="text-center p-0">
+                <i class="bi bi-lightbulb fs-1"></i>
+                <p>Conseils</p>
+              </div>
+            </li>
+            <li class="navbar-brand d-flex flex-nowrap mx-2" href="#">
+              <div class="text-center p-0">
+                <i class="bi bi-megaphone fs-1"></i>
+                <p>Sorties</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
     </main>
 
     <footer></footer>
 
-    <script
-      src="https://kit.fontawesome.com/b4f9175766.js"
-      crossorigin="anonymous"
-    ></script>
-    <footer>
-        
-    </footer>
+    <script src="https://kit.fontawesome.com/b4f9175766.js" crossorigin="anonymous"></script>
     <script src="./lib/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
-  </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-</body>
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"></script>
+  </body>
 
 </html>
