--- a/map.html
+++ b/map.html
@@ -193,13 +193,11 @@
     <main>
       <section class="map container">
         <div class="row">
-          <div class="col-9">
+          <div class="col-12 col-lg-9">
             <div id="map"></div>
           </div>
-          <div class="col-3">
-            <button id="find-me">Show my location</button><br />
+          <div class="col-12 col-lg-3">
             <p id="status"></p>
-            <a id="map-link" target="_blank"></a>
           </div>
         </div>
       </section>
