--- a/map.html
+++ b/map.html
@@ -192,14 +192,20 @@
     <!-- Main -->
     <main>
       <section class="map container">
+        <h1 class="mt-4">Producteurs près de chez vous</h1>
         <div class="row">
-          <div class="col-12 col-lg-9">
-            <div id="map"></div>
-          </div>
-          <div class="col-12 col-lg-3">
-            <p id="status"></p>
+          <div class="col-12">
+            <div
+              id="map"
+              class="d-flex justify-content-center align-items-center rounded-2"
+            >
+              <div class="spinner-border text-success" role="status">
+                <span class="visually-hidden">Loading...</span>
+              </div>
+            </div>
           </div>
         </div>
+        <p id="status"></p>
       </section>
 
       <!-- Navbar mobile -->
