--- a/form.html
+++ b/form.html
@@ -27,7 +27,7 @@
         <!-- Version tablet-->
         <nav class="tablet navbar navbar-expand justify-content-center d-none d-md-block d-lg-none">
             <div class="container-fluid">
-                <img src="./public/assets/img/logo_desktop.png" alt="photo de profil" class="logo_desktop">
+                <img href="http://127.0.0.1:5500/home.html" src="./public/assets/img/logo_desktop.png" alt="photo de profil" class="logo_desktop">
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <div class="input-group searchbar_desktop ms-4">
                         <input type="text" class="form-control" placeholder="Recherche" aria-label="Recherche">
@@ -42,7 +42,7 @@
 
                     <ul class="navbar-nav ms-2 me-2">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page">Annonces</a>
+                            <a href="http://127.0.0.1:5500/announcements.html" class="nav-link" aria-current="page">Annonces</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link">Conseils & Jardin</a>
@@ -51,7 +51,7 @@
                             <a class="nav-link">Évènements</a>
                         </li>
                     </ul>
-                    <a class="btn btn-action ms-auto me-4"><i class="gg-add-r"></i></a>
+                    <a href="http://127.0.0.1:5500/form.html" class="btn btn-action ms-auto me-4 text-white"><i class="gg-add-r"></i></a>
                     <img src="./public/assets/img/profil/granny.png" alt="photo de profil" class="p_profil_desktop ">
                 </div>
             </div>
@@ -76,7 +76,7 @@
 
                     <ul class="navbar-nav ms-5 me-2">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Annonces</a>
+                            <a href="http://127.0.0.1:5500/announcements.html" class="nav-link" aria-current="page" href="#">Annonces</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Conseils & Jardin</a>
@@ -85,7 +85,7 @@
                             <a class="nav-link" href="#">Évènements</a>
                         </li>
                     </ul>
-                    <a href="#" class="btn btn-action ms-auto me-4">Créer une annonce</a>
+                    <a href="http://127.0.0.1:5500/form.html" class="btn btn-action ms-auto me-4">Créer une annonce</a>
                     <img src="./public/assets/img/profil/granny.png" alt="photo de profil d'une personne agée"
                         class="p_profil_desktop ">
                 </div>
@@ -248,9 +248,10 @@
                     </div>
                 </div>
                 <div class="col-4 mt-4">
-                    <div>ANNONCES</div>
+                    <a href="http://127.0.0.1:5500/announcements.html"><div>ANNONCES</div></a>
                     <div>CONSEILS & JARDIN</div>
                     <div>EVENEMENTS</div>
+                    <div>PRODUCTEURS</div>
                     <hr>
                     <p>Politique de confidentialité</p>
                 </div>
